--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="/">WebStudio</a>
+        <a href="">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="">WebStudio</a>
         <address>
             <ul>
                 <li>
