Corrected the address link

--- a/index.html
+++ b/index.html
@@ -102,16 +102,18 @@
         <address>
             <ul>
                 <li>
-                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <a href="https://www.google.com/maps/place/@50.4265807,30.5361971,17z" target="_blank" rel="noopener noreferrer">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
                 </li>
                 <li>
                     <a href="mailto:info@example.com">
-                        <p>info@example.com</p>
+                        info@example.com
                     </a>
                 </li>
                 <li>
                     <a href="tel:+380991111111">
-                        <p>+38 099 111 11 11</p>
+                        +38 099 111 11 11
                     </a>
                 </li>
             </ul>
