--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
             <h2>...</h2>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3>Внимание к деталям вата </h3>
                     <p>
                         Идейные соображения, а также начало повседневной работы по
                         формированию позиции.
